syntax = "proto3";

package company;

service CompanyService {
  rpc CreateCompany (CreateCompanyRequest) returns (CreateCompanyResponse) {}
}

message CreateCompanyRequest {
  Status status = 1;
  string name = 2;
  string legalName = 3;
  string logo = 4;
  string description = 5;
  string mfo = 6;
  HolderType holderType = 7;
  string directorFullName = 8;
  string bankName = 9;
  string branchName = 10;
  string branchCode = 11;
  string oked = 12;
  string inn = 13;
  string phone = 14;
  string email = 15;
  OrderType orderType = 16;
  string legalAddress = 17;
  Address address = 18;
}

message CreateCompanyResponse {
  string id = 1;
  repeated string error = 2;
  int32 status = 3;
}

// Address
message Address {
  string latitude = 1;
  string longitude = 2;
  string name = 3;
  string street = 4;
  string city = 5;
  string home = 6;
  string postalCode = 7;
  string apartment = 8;
  string comment = 9;
  string domofon = 10;
  string address = 11;
  int32 regionId = 12;
  int32 districtId = 13;
}

// ENUMS
enum Status {
  ACTIVE = 1;
  BLOCKED = 2;
  PENDING = 3;
  PAUSED = 4;
}

enum HolderType {
  INDIVIDUAL = 1;
  LTD = 2;
}

enum OrderType {
  ALL = 1;
  PREORDER = 2;
  END_PRODUCT = 3;
}
