/* eslint-disable */
export const protobufPackage = '';

export interface Address {
  latitude: string;
  longitude: string;
  name: string;
  street: string;
  city: string;
  home: string;
  postalCode: string;
  apartment: string;
  comment: string;
  domofon: string;
  address: string;
  regionId: number;
  districtId: number;
}

export const _PACKAGE_NAME = '';
